# hw11

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CNAME  InputFairDivider.h  Makefile  MapReduce.h  Mapper.h  Reducer.h  Shuffler.h  cmake_install.cmake  main.cpp  mapreduce  tests.cpp
.github/workflows/: release.yml
html/: InputFairDivider_8h_source.html  MapReduce_8h_source.html  Mapper_8h_source.html  Reducer_8h_source.html  Shuffler_8h_source.html  annotated.html  classInputFairDivider-members.html  classInputFairDivider.html  classMapper-members.html  classMapper.html  classReducer-members.html  classReducer.html  classShuffler-members.html  classShuffler.html  classes.html  files.html  structArgsFixture-members.html  structArgsFixture.html  structcout__redirect-members.html  structcout__redirect.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  searchdata.js
input/: test2.txt  test3.txt
latex/: annotated.tex  classInputFairDivider.tex  classMapper.tex  classReducer.tex  classShuffler.tex  refman.tex  structArgsFixture.tex  structcout__redirect.tex
